Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,8 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'Fastlane'
+pool: Fastlane
+  vmImage: 'windows-latest'
 
 variables:
   solution: '**/*.sln'
